tests/negative/typecheck/case.orng
fn main() -> Int
    case
    | false
    | false
    | true